--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_login.css">
+    <link rel="stylesheet" href="tela home/style_login.css">
     <title>Página inicial</title>
 </head>
 <body>
     <h1>Testes de páginas para o GitHub Pages</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat asperiores excepturi neque quod corporis explicabo corrupti, tempore accusamus non, accusantium exercitationem quibusdam nobis impedit vel laboriosam error cupiditate dolorem laborum.</p>
-    <a href="second.html">Para acessar a segunda página clique aqui</a> 
+    <a href="tela login/second.html">Para acessar a segunda página clique aqui</a> 
     <br>
-    <a href="third.html">Para acessar a Terceira página clique</a>
+    <a href="tela home/third.html">Para acessar a Terceira página clique</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora at est cumque expedita. Deleniti voluptatem, repudiandae sunt impedit maiores et animi illo laborum quaerat explicabo recusandae quo cum assumenda?</p>
 </body>
 </html>
